--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,38 @@
-#popup-2 {
-    background-color: #4C424A;
+
+
+.mainContainer {
+    background-color: #fff9e6;
+    display: flex;
+    align-items: start; /* Align children at the start */
+    width: 100%; /* Ensure it takes the full width */
+}
+
+
+.sideContainer {
+    margin-top: 7%;
+    margin-left: 20px;
+    width: 30%; /* Set width to 30% of the parent container */
+    display: flex;
+    flex-direction: column; /* Stack children vertically */
+    margin-right: 20px; /* Space between side container and calendar */
+}
+
+.sideBox {
+    /* Style your individual boxes here */
+    margin-bottom: 10px; /* Space between boxes */
+    padding: 10px;
+    border: 1px solid black; /* Example styling */
+    /* Add more styling as needed */
+}
+
+.calendarContainer {
+    display: block;
+    width: 60%;
+    text-align: center
+}
+
+.popup-content {
+    background: #4C424A;
     border-radius: 4px;
     border-color: #FFE787;
 }
